* Added new authors

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,5 +1,23 @@
-asaval:
+asaval@andrew.cmu.edu:
   name: Ashwin Saval
-  email: asaval@andrew.cmu.edu
   photo: https://media-exp1.licdn.com/dms/image/C5103AQFm_5V7ehdyMw/profile-displayphoto-shrink_400_400/0/1577903224713?e=1663200000&v=beta&t=f4Vbz8kgcF5lmrqLsJh5Qy_UiLfCHeX8RSgxzFKfuUk
   website: https://www.linkedin.com/in/ashwin-saval-aaa2901a/
+
+shichenh@andrew.cmu.edu:
+  name: Shicheng Huang
+
+sarthakt@andrew.cmu.edu:
+  name: Sarthak Tandon
+  photo: https://www.lti.cs.cmu.edu/sites/default/files/styles/directory_thumb/public/Tandon%2C%20Sarthak.jpg?itok=EegqF8oU
+
+ziyanz@andrew.cmu.edu:
+  name: Ziyan Zhang
+  photo: https://www.lti.cs.cmu.edu/sites/default/files/styles/directory_thumb/public/Zhang%2C%20Ziyan.jpg?itok=xizWcJl7
+
+xiangyue@andrew.cmu.edu:
+  name: Xiang Yue
+  photo: https://www.lti.cs.cmu.edu/sites/default/files/styles/directory_thumb/public/Yue%2C%20Xiang.jpg?itok=unNVKHIF
+
+boxuanli@cs.cmu.edu:
+  name: Boxuan Li
+  photo: https://www.lti.cs.cmu.edu/sites/default/files/styles/directory_thumb/public/Li%2C%20Boxuan.jpg?itok=pL9RqvB9
