--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,16 @@ footer-links:
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus:
 
+collections:
+  authors:
+    output: true
+# Default layouts for each collection type
+defaults:
+  - scope:
+      path: ''
+      type: authors
+    values:
+      layout: author
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
